gen/spanner/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-spanner1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/spanner/v1/lib)
error[E0423]: expected value, found struct `instance_configs::InstanceConfigsActions`
    --> gen/spanner/v1/lib/src/lib.rs:2430:13
     |
2430 |             instance_configs::InstanceConfigsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instance_configs::InstanceConfigsActions { /* fields */ }`?

error[E0423]: expected value, found struct `instances::InstancesActions`
    --> gen/spanner/v1/lib/src/lib.rs:2434:13
     |
2434 |             instances::InstancesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `databases::DatabasesActions`
    --> gen/spanner/v1/lib/src/lib.rs:3026:17
     |
3026 |                 databases::DatabasesActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `databases::DatabasesActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/spanner/v1/lib/src/lib.rs:3030:17
     |
3030 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/spanner/v1/lib/src/lib.rs:4383:21
     |
4383 |                     operations::OperationsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `sessions::SessionsActions`
    --> gen/spanner/v1/lib/src/lib.rs:4387:21
     |
4387 |                     sessions::SessionsActions
     |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `sessions::SessionsActions { /* fields */ }`?

error[E0072]: recursive type `schemas::Type` has infinite size
    --> gen/spanner/v1/lib/src/lib.rs:2131:5
     |
2131 |     pub struct Type {
     |     ^^^^^^^^^^^^^^^ recursive type has infinite size
...
2134 |         pub array_element_type: Option<crate::schemas::Type>,
     |         ---------------------------------------------------- recursive without indirection
     |
     = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `schemas::Type` representable

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0072, E0423.
For more information about an error, try `rustc --explain E0072`.
error: Could not compile `google-spanner1`.

To learn more, run the command again with --verbose.
